* Fixes that were left behind :( for paddings in users listing view

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-users.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-users.scss
@@ -6,7 +6,7 @@ body[class^='workspace'] {
   
   .workspace-teachers-listing-wrapper,
   .workspace-students-listing-wrapper {
-    padding:0 30px 20px 30px;
+    padding:0 30px 30px 30px;
   
     .workspace-users {
       padding:4px 5px;
